# HistogramReader

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  docs.yml  release.yml
docs/: api.rst  conf.py  index.md
histogram_reader/: __init__.py  main.py
histogram_reader/gui/: __init__.py  main_window.py
histogram_reader/services/: __init__.py  data_reader.py
scripts/: update_version.py
tests/: __init__.py
tests/unit/: __init__.py  test_main.py
